# NewsMind

./: .gitignore  AUTO_UPDATE_README.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt  start_news_system.py  test_curl.json  test_frontend.js  test_lmstudio_simple.py  test_load_more_functionality.py
backend/: Dockerfile  ENV_SETUP.md  README.md  pyproject.toml  pytest.ini  start_server.py
backend/app/: __init__.py  main.py
backend/app/api/: ai.py  news.py
backend/app/core/: cache.py  config.py  database.py  logging.py
backend/app/models/: __init__.py  news.py  user.py
backend/app/services/: ai_processor.py  crawler.py  fast_ai_processor.py  news_service.py  scheduler.py
backend/scripts/: create_test_data.py  init_db.py
backend/tests/: test_ai_processor.py  test_crawler.py  test_database.py
docs/: 01-阶段一总结.md  01-需求文档.md  02-概要设计.md  03-阶段三总结.md  03-项目开发计划.md  04-阶段一总结.md  04-阶段四总结.md  05-阶段二总结.md  05-阶段五总结.md  06-阶段七总结.md  07-阶段六总结.md  08-项目总体总结.md  09-阶段九总结.md  09-阶段八总结.md  10-代码结构概要说明.md  10-阶段十总结.md  API错误修复报告.md  助手工作规范与常见错误总结.md  助手错误清单.md  国外新闻获取问题解决报告.md  当前阶段总结.md  新闻显示要求总结.md  真实新闻获取使用指南.md  端到端测试报告.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
scripts/: add_ai_fields_to_news_articles.py  add_international_sources.py  add_original_title_field.py  add_translated_title_field.py  ai_processor_button.py  ai_translator.py  analyze_article_122_content.py  async_ai_processor.py  auto_delete_fake_translations.py  auto_delete_untranslated.py  auto_scheduler.py  batch_fix_articles.py  batch_speed_test.py  batch_translate_multilingual.py  batch_translate_titles.py  check_article_122_translation.py  check_article_49.py  check_article_54.py  check_article_54_db.py  check_article_59.py  check_article_59_simple.py  check_article_62.py  check_article_63.py  check_article_66.py  check_article_72.py  check_article_status.py  check_articles.py  check_content_length.py  check_db.py  (+110 more)
(+32 files in other folders)
