[project]
name = "newsmind-backend"
version = "0.1.0"
description = "NewsMind Backend API"
authors = [
    {name = "NewsMind Team", email = "team@newsmind.com"},
]
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.41",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "pydantic-settings>=2.10.1",
    "playwright>=1.53.0",
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "apscheduler>=3.11.0",
    "requests>=2.32.4",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.3",
    "deepseek-ai>=0.0.1",
    "aiohttp>=3.12.13",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "mypy>=1.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
]
